[gd_scene load_steps=8 format=3 uid="uid://cn63y8p0w6qjk"]

[ext_resource type="Texture2D" uid="uid://cijto0danu45l" path="res://Assets/2D Assets/ds.png" id="1_gm87t"]
[ext_resource type="Script" uid="uid://dowle5kcyix4l" path="res://Scenes/PCUI/window_base.gd" id="1_qcn4i"]
[ext_resource type="FontFile" uid="uid://db16gjjdg8f7x" path="res://Assets/Fonts/VT323-Regular.ttf" id="2_72yau"]
[ext_resource type="Script" uid="uid://0rv5ldycllyo" path="res://Scenes/PCUI/discord.gd" id="2_gm87t"]
[ext_resource type="Texture2D" uid="uid://dxf54u1w755u" path="res://Assets/2D Assets/Icons/hydra.png" id="3_gm87t"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bgb4g"]
texture = ExtResource("1_gm87t")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_84nat"]
texture = ExtResource("3_gm87t")

[node name="Discord" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -697.0
offset_bottom = -377.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_gm87t")

[node name="WindowBase" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_right = 1223.0
offset_bottom = 703.0
script = ExtResource("1_qcn4i")

[node name="PanelContainer" type="PanelContainer" parent="WindowBase"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bgb4g")

[node name="Chat" type="Control" parent="WindowBase"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="WindowBase/Chat"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.244
anchor_top = 0.033
anchor_right = 1.0
anchor_bottom = 0.875
offset_left = 0.587982
offset_top = -0.198999
offset_right = -12.0
offset_bottom = -0.125061
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="WindowBase/Chat/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 75

[node name="Message" type="Panel" parent="WindowBase/Chat/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message"]
layout_mode = 0
offset_left = 50.0
offset_right = 81.0
offset_bottom = 17.0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_72yau")
theme_override_font_sizes/font_size = 20
text = "Eshak"

[node name="HBoxContainer" type="HBoxContainer" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message/HBoxContainer"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_84nat")

[node name="HSeparator" type="HSeparator" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message/HBoxContainer"]
layout_mode = 2

[node name="Message_text" type="Label" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.762404, 0.762404, 0.762404, 1)
text = "Test Mesage"

[node name="Message2" type="Panel" parent="WindowBase/Chat/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message2"]
layout_mode = 0
offset_left = 50.0
offset_right = 81.0
offset_bottom = 17.0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_72yau")
theme_override_font_sizes/font_size = 20
text = "Eshak"

[node name="HBoxContainer" type="HBoxContainer" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message2/HBoxContainer"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_84nat")

[node name="HSeparator" type="HSeparator" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message2/HBoxContainer"]
layout_mode = 2

[node name="Message_text" type="Label" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.762404, 0.762404, 0.762404, 1)
text = "Test Mesage"

[node name="Message3" type="Panel" parent="WindowBase/Chat/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message3"]
layout_mode = 0
offset_left = 50.0
offset_right = 81.0
offset_bottom = 17.0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_72yau")
theme_override_font_sizes/font_size = 20
text = "Eshak"

[node name="HBoxContainer" type="HBoxContainer" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message3/HBoxContainer"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_84nat")

[node name="HSeparator" type="HSeparator" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message3/HBoxContainer"]
layout_mode = 2

[node name="Message_text" type="Label" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message3/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.762404, 0.762404, 0.762404, 1)
text = "Test Mesage"

[node name="Message4" type="Panel" parent="WindowBase/Chat/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message4"]
layout_mode = 0
offset_left = 50.0
offset_right = 81.0
offset_bottom = 17.0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_72yau")
theme_override_font_sizes/font_size = 20
text = "Eshak"

[node name="HBoxContainer" type="HBoxContainer" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message4"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message4/HBoxContainer"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_84nat")

[node name="HSeparator" type="HSeparator" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message4/HBoxContainer"]
layout_mode = 2

[node name="Message_text" type="Label" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message4/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.762404, 0.762404, 0.762404, 1)
text = "Test Mesage"

[node name="Message5" type="Panel" parent="WindowBase/Chat/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message5"]
layout_mode = 0
offset_left = 50.0
offset_right = 81.0
offset_bottom = 17.0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_72yau")
theme_override_font_sizes/font_size = 20
text = "Eshak"

[node name="HBoxContainer" type="HBoxContainer" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message5"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message5/HBoxContainer"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_84nat")

[node name="HSeparator" type="HSeparator" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message5/HBoxContainer"]
layout_mode = 2

[node name="Message_text" type="Label" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message5/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.762404, 0.762404, 0.762404, 1)
text = "Test Mesage"

[node name="Message6" type="Panel" parent="WindowBase/Chat/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message6"]
layout_mode = 0
offset_left = 50.0
offset_right = 81.0
offset_bottom = 17.0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_72yau")
theme_override_font_sizes/font_size = 20
text = "Eshak"

[node name="HBoxContainer" type="HBoxContainer" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message6"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message6/HBoxContainer"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_84nat")

[node name="HSeparator" type="HSeparator" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message6/HBoxContainer"]
layout_mode = 2

[node name="Message_text" type="Label" parent="WindowBase/Chat/ScrollContainer/VBoxContainer/Message6/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.762404, 0.762404, 0.762404, 1)
text = "Test Mesage"

[node name="Exit" type="Button" parent="WindowBase"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -14.0
offset_bottom = 15.0
grow_horizontal = 0

[connection signal="pressed" from="WindowBase/Exit" to="." method="_on_exit_pressed"]
